--- a/index.html
+++ b/index.html
@@ -35,6 +35,24 @@
     <div id="message" class="message"></div>
 </div>
 
+<footer class="footer">
+  <p>&copy; 2025 Ever Campos. Todos los derechos reservados.</p>
+  
+  <p class="dedication">
+    Solo soy un simple joven que le gusta hacer páginas para su pareja.  
+    Esta es una para que, cuando yo no esté a su lado,  
+    ella pueda leer algo que yo le diría según cómo se siente. 💖
+  </p>
+
+  <div class="footer-links">
+    <a href="https://www.facebook.com/ever.campos17" target="_blank">Mi Facebook</a>
+    <a href="/about">Acerca de</a>
+    <a href="/contact">Contacto</a>
+    <a href="/terms">Términos</a>
+  </div>
+</footer>
+    
+
 <script src="js/script.js"></script>
 
 </body>
